# SakuraLeveling

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  lita_v2.db  pyproject.toml  start.txt  tuto.txt
.claude/: settings.local.json
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 277fe14515ad_add_family_to_item_definitions.py  2e86f71a0e24_add_advanced_combat_stats_to_mobs.py  32809aec4946_add_item_stat_bonuses.py  434ba322dec1_add_quests.py  4da37c7728e3_add_player_career_stats_table.py  4f90a26b07f5_add_mob_spawn_weight.py  552d5a97e9a0_add_class_unlock_requirements.py  5546a51fa27d_add_player_titles.py  559b131677cb_add_equipment_slot_and_two_hand_flag_to_.py  58ec096ff5e6_add_weekly_quests.py  6dd9ebb70614_add_player_duel_ranks.py  7255b0599205_add_daily_quests.py  7c075a207b31_add_daily_streak_to_player_resources.py  7d119c0b61a1_add_crafts.py  83994272ea1b_initial_schema.py  84b66f305f4b_add_player_skill_allocations.py  881b577f4f75_add_class_unlock_requirements.py  8b4b8f0124f0_add_player_equipment.py  8f5906a66f85_add_world_bosses.py  9154b44b1471_add_marketplace.py  (+32 more)
app/bot/: main.py
deploy/: nginx-sakura-webapp.conf  sakura-bot.service  sakura-webapp.service
docs/: sakura_content.xlsx  skill_tree_authoring.md
lita_v2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: backup_db.sh  deploy_beta.sh  deploy_vps.sh  export_content_spreadsheet.py  generate_skill_tree.py  import_content_spreadsheet.py  panoplie_plus.py  provision.sh  restat_mobs.py  setup_webapp_public.sh  setup_webapp_standalone.sh
webapp/: main.py
(+367 files in other folders)
